--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 0",
-    "start": "node .",
+    "start": "NODE_ENV=dev node -r dotenv/config .",
     "prepare-commit-msg-unix": "exec < /dev/tty && git cz --hook || true",
     "prepare-commit-msg-win": "scripts/prepare-commit-msg",
     "prepare": "husky install"
@@ -33,5 +33,8 @@
     "eslint-plugin-promise": "^5.1.1",
     "husky": "^7.0.4",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
   }
 }
