--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["standard"],
+  "extends": ["standard", "plugin:jest/recommended"],
   "rules": {
     "semi": "off",
     "space-before-function-paren": "off"
