--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "node -r dotenv/config --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:ci": "npm test -- --ci",
     "start": "NODE_ENV=dev node -r dotenv/config .",
     "prepare-commit-msg-unix": "exec < /dev/tty && git cz --hook || true",
     "prepare-commit-msg-win": "scripts/prepare-commit-msg",
@@ -25,14 +26,17 @@
   "homepage": "https://github.com/ruddenchaux/simple-tcp-server#readme",
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.0",
+    "@types/jest": "^27.0.2",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^25.2.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.1",
     "husky": "^7.0.4",
+    "jest": "^27.3.1",
     "prettier": "^2.4.1"
   },
   "dependencies": {
