--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "npm run lint -- --fix",
+    "lint:ci": "npm run lint -- --quiet",
     "test": "NODE_ENV=test node -r dotenv/config --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:ci": "npm test -- --ci",
     "test:watch": "npm test -- --watchAll",
